initial bulk endpoint implementation
add some context to stale data error

bulk happy path working

test working for bulk endpoint

fix stub

fix swagger and local mode start

return 409 on bulk version mismatch

more tests
