# public/r2/v1/swagger/swagger.json
@@ -199,27 +199,28 @@
                 ],
                 "parameters": [
                     {
-                        "in": "path",
-                        "name": "namespaceID",
-                        "description": "The name of the namespace",
-                        "type": "string",
-                        "required": true
-                    },
-                    {
                         "in": "body",
                         "name": "ruleset-changes",
                         "description": "The updates to the ruleset",
                         "required": true,
                         "schema": {
-                        "$ref": "#/definitions/RuleSetChanges"
+                            "type": "object",
+                            "properties": {
+                                "ruleset-changes": {
+                                    "$ref": "#/definitions/RuleSetChanges"
+                                },
+                                "ruleset-version": {
+                                    "type": "integer"
+                                }
+                            }
                         }
                     },
                     {
-                        "in": "body",
-                        "name": "ruleset-version",
-                        "description": "The ruleset version to atomically apply bulk updates against",
-                        "required": true,
-                        "type": "integer"
+                        "in": "path",
+                        "name": "namespaceID",
+                        "description": "The name of the namespace",
+                        "type": "string",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -555,7 +556,7 @@
                     },
                     {
                         "in": "path",
-                        "name": "ruleId",
+                        "name": "ruleID",
                         "description": "The id of the rule",
                         "type": "string",
                         "required": true
@@ -946,14 +947,14 @@
         "RuleSetChanges": {
             "type": "object",
             "properties": {
-                "MappingRuleChanges": {
+                "mappingRuleChanges": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/MappingRuleChange"
                     },
                     "description": "list of mapping rule changes"
                 },
-                "RollupRuleChanges": {
+                "rollupRuleChanges": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/RollupRuleChange"
@@ -965,7 +966,7 @@
         "MappingRuleChange": {
             "type": "object",
             "properties": {
-                "operation": {
+                "op": {
                     "type": "string",
                     "enum": ["add", "delete", "change"],
                     "description": "type of operation on rule"
@@ -983,7 +984,7 @@
         "RollupRuleChange": {
             "type": "object",
             "properties": {
-                "operation": {
+                "op": {
                     "type": "string",
                     "enum": ["add", "delete", "change"],
                     "description": "type of operation on rule"
